# OpenCvProjects

./: .gitignore  CMakeLists.txt  README.md
MatOps/: CMakeLists.txt  MatOps.cpp
ReadWriteImageVideo/: CMakeLists.txt  ReadWriteImageVideo.cpp
Transparent_API/: CMakeLists.txt  TAPI.py  TransparentAPI.cpp  nonTAPI.py
